[gd_scene load_steps=6 format=3 uid="uid://dqsic8w63vpip"]

[ext_resource type="Theme" uid="uid://dhwpta7qgho67" path="res://UI/UI_theme.tres" id="3_ouhuc"]
[ext_resource type="Script" path="res://scripts/outro.gd" id="5_b8t2e"]
[ext_resource type="FontFile" uid="uid://bndhiv2j056cg" path="res://UI/kenney_mini_square.ttf" id="6_vlyde"]

[sub_resource type="LabelSettings" id="LabelSettings_a77p0"]
font = ExtResource("6_vlyde")
font_size = 72

[sub_resource type="LabelSettings" id="LabelSettings_j4415"]
font = ExtResource("6_vlyde")
font_size = 28

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5_b8t2e")

[node name="DarkScreen" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -173.5
offset_top = -157.0
offset_right = 173.5
offset_bottom = 157.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
text = "Do you want to quit?"
label_settings = SubResource("LabelSettings_a77p0")
horizontal_alignment = 1
vertical_alignment = 2

[node name="Statistic" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
text = "We have other challenges for you"
label_settings = SubResource("LabelSettings_j4415")
horizontal_alignment = 1

[node name="Tutorial" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_pressed_color = Color(1, 0.431373, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0.431373, 0, 1)
theme_override_colors/font_focus_color = Color(1, 0.431373, 0, 1)
theme_override_colors/font_hover_pressed_color = Color(1, 0.431373, 0, 1)
theme_override_fonts/font = ExtResource("6_vlyde")
theme_override_font_sizes/font_size = 72
text = "Tutorials {1-3}"
flat = true

[node name="Level4" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_pressed_color = Color(1, 0.431373, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0.431373, 0, 1)
theme_override_colors/font_focus_color = Color(1, 0.431373, 0, 1)
theme_override_fonts/font = ExtResource("6_vlyde")
theme_override_font_sizes/font_size = 72
text = "Level 4"
flat = true

[node name="Level5" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_pressed_color = Color(1, 0.431373, 0, 1)
theme_override_colors/font_hover_color = Color(1, 0.431373, 0, 1)
theme_override_colors/font_focus_color = Color(1, 0.431373, 0, 1)
theme_override_fonts/font = ExtResource("6_vlyde")
theme_override_font_sizes/font_size = 72
text = "Level 5"
flat = true

[node name="Egg" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 8
text = "Have you already found the easter egg yet?"
label_settings = SubResource("LabelSettings_j4415")
horizontal_alignment = 1

[node name="MMenu" type="Label" parent="."]
offset_left = 1592.0
offset_top = 1004.0
offset_right = 1858.0
offset_bottom = 1052.0
theme = ExtResource("3_ouhuc")
theme_override_font_sizes/font_size = 38
text = "M = main menu"
horizontal_alignment = 2
vertical_alignment = 2

[connection signal="pressed" from="VBoxContainer/Tutorial" to="." method="_on_tutorial_pressed"]
[connection signal="pressed" from="VBoxContainer/Level4" to="." method="_on_level_4_pressed"]
[connection signal="pressed" from="VBoxContainer/Level5" to="." method="_on_level_5_pressed"]
